<resources>
    <string name="app_name">Система управления задачами</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="enter_username">Введите имя пользователя</string>
    <string name="enter_password">Введите пароль</string>
    <string name="register_logo">Иконка регистрации</string>
    <string name="enter">Вход</string>
    <string name="login_logo">Иконка входа</string>
    <string name="add_task">Добавить задачу</string>
    <string name="connect_failed">Не удалось подключиться к серверу</string>
    <string name="disconnect_failed">Не удалось отключиться от сервера</string>
    <string name="send_failed">Не удалось отправить запрос</string>
    <string name="receive_failed">Не удалось получить ответ</string>
    <string name="user_already_exists">Пользователь с таким именем уже существует</string>
    <string name="add_user_failed">Не удалось добавить нового пользователя</string>
    <string name="empty_fields_error">Все поля должны быть заполнены</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="incorrect_password">Неверный пароль</string>
    <string name="tab_names">Названия вкладок</string>
    <string name="table_data">Таблица</string>
    <string name="task_name">Название задачи</string>
    <string name="enter_task_name">Ввведите название задачи</string>
    <string name="task_description">Описание задачи</string>
    <string name="enter_task_description">Введите описание задачи</string>
    <string name="task_end_date">Последний срок выполнения</string>
    <string name="date">Дата</string>
    <string name="enter_date">Выбрать дату</string>
    <string name="empty_fields_add_error">Поля \'Название\' и \'Дата\' должны быть заполнены</string>
    <string name="add_task_failed">Не удалось добавить новую задачу</string>
    <string name="task_added">Задача добавлена</string>
    <string name="edit_task">Изменить задачу</string>
    <string name="complete_task">Выполнить задачу</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="edit_task_failed">Не удалось изменить задачу</string>
    <string name="task_edited">Задача изменена</string>
    <string name="delete_task_failed">Не удалось удалить задачу</string>
    <string name="task_deleted">Задача удалена</string>
</resources>