<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewRegisterHeader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="34sp"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imageViewRegisterLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/register_logo"
            app:srcCompat="@drawable/register" />

        <TextView
            android:id="@+id/textViewRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:minHeight="50dp"
            android:textColorHint="#737373"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textViewRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textColorHint="#737373"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:text="@string/register"
            android:onClick="onClickRegister"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>