<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewAddTaskHeader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/add_task"
            android:textSize="34sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textViewAddTaskName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/task_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextAddTaskName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/enter_task_name"
            android:inputType="text"
            android:minHeight="50dp"
            android:textColorHint="#737373"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textViewAddTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/task_description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextAddTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/enter_task_description"
            android:inputType="text"
            android:minHeight="50dp"
            android:textColorHint="#737373"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textViewAddTaskEndDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/task_end_date"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextAddTaskEndDate"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="username"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:hint="@string/date"
                android:minHeight="50dp"
                android:textColorHint="#737373"
                android:textSize="16sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/buttonPickDateAdd"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:onClick="onClickOpenCalendar"
                android:text="@string/enter_date" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAddTask"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:onClick="onClickAddTask"
            android:text="@string/add_task"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>