<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageViewAppLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/buttonOpenRegisterActivity"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:text="@string/register"
            android:onClick="onClickOpenRegisterActivity"/>

        <Button
            android:id="@+id/buttonOpenLoginActivity"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:onClick="onClickOpenLoginActivity"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>